Test/errors/err_lambda_missing_return.cb
extern int main()
{
    expect_error("missing return statement");
    function<int(int)> f = (int x) => { int y = x + 1; };
    return 0;
}
